# clay_todoapp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/include/: config.hpp  database.hpp  header.hpp  layout.hpp
